# computer-vision-final-project

./: .gitignore  README.md  main.py  metricFunctions.py  pyproject.toml
data/: updated-label-map.json
src/: all_models.py  definitions.py  main.py  main_inference_time.py  metricFunctions.py  metricFunctions_2.py
src/dataset/: coco.py
